@@ -55,6 +55,8 @@ class DebuggerUserOutput(Mbase.DebuggerInOutBase):
         """ This method the debugger uses to write. In contrast to
         writeline, no newline is added to the end to `str'.
         """
+        if self.output.closed:
+             raise IOError("writing %s on a closed file" % msg)
         self.output.write(msg)
         if self.flush_after_write: self.flush()
         return
