@@ -16,6 +16,7 @@
 import inspect, linecache, os, sys, shlex, tempfile, traceback, types
 import pyficache
 from reprlib import Repr
+from pygments.console import colorize
 
 from tracer import EVENT2SHORT
 
@@ -186,10 +187,11 @@ def print_location(proc_obj):
                                                  prefix='eval_string',
                                                  delete=False)
                 with fd:
-                    fd.write(dbgr_obj.eval_string)
+                    fd.write(bytes(dbgr_obj.eval_string, 'UTF-8'))
                     fd.close()
                     pass
-                pyficache.remap_file(fd.name, '<string>')
+                pyficache.remap_file(fd.name, '<string %s>' %
+                                     dbgr_obj.eval_string)
                 filename = fd.name
                 pass
             pass
@@ -339,9 +341,12 @@ class CommandProcessor(Mprocessor.Processor):
         if self.thread_name != 'MainThread':
             prompt += ':' + self.thread_name
             pass
-        self.prompt_str = '%s%s%s ' % ('(' * self.debug_nest,
+        self.prompt_str = '%s%s%s' % ('(' * self.debug_nest,
                                        prompt,
                                        ')' * self.debug_nest)
+        if self.debugger.settings['highlight']:
+            self.prompt_str =  colorize('underline', self.prompt_str)
+        self.prompt_str += ' '
         self.process_commands()
         return True
 
@@ -754,6 +759,8 @@ class CommandProcessor(Mprocessor.Processor):
                 get_stack(self.frame, exc_traceback, None, self)
             self.curframe = self.stack[self.curindex][0]
             self.thread_name = Mthread.current_thread_name()
+            if exc_traceback:
+                self.list_lineno = traceback.extract_tb(exc_traceback, 1)[0][1]
 
         else:
             self.stack = self.curframe = \
